@@ -1,6 +1,6 @@
 /***********************************************************************
  *
- * Copyright (C) 2009 Graeme Gott <graeme@gottcode.org>
+ * Copyright (C) 2009, 2013 Graeme Gott <graeme@gottcode.org>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,172 +19,116 @@
 
 #include "dictionary.h"
 
-#include <QRegExp>
-#include <QStringList>
-#include <QTcpSocket>
+#include <QNetworkAccessManager>
+#include <QNetworkReply>
+#include <QNetworkRequest>
+#include <QXmlStreamReader>
 
-namespace {
-	enum Type {
-		Status,
-		Name,
-		Definition,
-		Done
-	};
+static const QByteArray USER_AGENT = "Connectagram/" + QByteArray(VERSIONSTR) + " (http://gottcode.org/connectagram/; Qt/" + qVersion() + ")";
+
+Dictionary::Dictionary(QObject* parent)
+: QObject(parent) {
+	m_url.setScheme("http");
+	m_url.setPath("/w/api.php");
+#if (QT_VERSION >= QT_VERSION_CHECK(5,0,0))
+	m_query.addQueryItem("format", "xml");
+	m_query.addQueryItem("action", "mobileview");
+	m_query.addQueryItem("sections", "all");
+	m_query.addQueryItem("noimages", "");
+#else
+	m_url.addQueryItem("format", "xml");
+	m_url.addQueryItem("action", "mobileview");
+	m_url.addQueryItem("sections", "all");
+	m_url.addQueryItem("noimages", "");
+#endif
+	setLanguage("en");
+
+	m_manager = new QNetworkAccessManager(this);
+	connect(m_manager, SIGNAL(finished(QNetworkReply*)), this, SLOT(lookupFinished(QNetworkReply*)));
 }
 
 //-----------------------------------------------------------------------------
 
-Dictionary::Dictionary(QObject* parent)
-: QThread(parent) {
+void Dictionary::setLanguage(const QString& langcode) {
+	m_url.setHost(langcode + ".wiktionary.org");
 }
 
 //-----------------------------------------------------------------------------
 
 void Dictionary::lookup(const QString& word) {
-	m_word_mutex.lock();
-	m_words.append(word);
-	m_word_mutex.unlock();
-	if (!isRunning()) {
-		start();
+	QNetworkRequest request;
+	QUrl url = m_url;
+#if (QT_VERSION >= QT_VERSION_CHECK(5,0,0))
+	QUrlQuery query = m_query;
+	query.addQueryItem("page", word.toLower());
+	url.setQuery(query);
+#else
+	url.addQueryItem("page", word.toLower());
+#endif
+	request.setUrl(url);
+	request.setRawHeader("User-Agent", USER_AGENT);
+
+	QNetworkReply* reply = m_manager->get(request);
+	m_words[reply] = word;
+}
+
+//-----------------------------------------------------------------------------
+
+void Dictionary::wait() {
+	QHashIterator<QNetworkReply*, QString> i(m_words);
+	while (i.hasNext()) {
+		i.key()->abort();
 	}
 }
 
 //-----------------------------------------------------------------------------
 
-void Dictionary::run() {
-	m_word_mutex.lock();
-	while (!m_words.isEmpty()) {
-		m_word = m_words.takeFirst().toUpper();
-		m_word_mutex.unlock();
-
-		downloadDefinition();
-		parseDefinition();
-		emit wordDefined(m_word, m_definition);
-
-		m_word_mutex.lock();
-	}
-	m_word_mutex.unlock();
-}
-
-//-----------------------------------------------------------------------------
-
-void Dictionary::downloadDefinition() {
-	QTcpSocket socket;
-	socket.connectToHost("www.dict.org", 2628);
-	if (!socket.waitForConnected(-1)) {
-		m_definition = tr("Unable to connect to www.dict.org");
+void Dictionary::lookupFinished(QNetworkReply* reply) {
+	// Find word
+	QString word = m_words.value(reply);
+	if (word.isEmpty()) {
+		qWarning("Unknown lookup");
+		reply->deleteLater();
 		return;
 	}
+	m_words.remove(reply);
 
-	socket.waitForReadyRead(-1);
-	socket.readAll();
-
-	socket.write(QString("DEFINE wn \"%1\"\n").arg(m_word).toUtf8());
-	socket.flush();
-
-	m_data.clear();
-	do {
-		socket.waitForReadyRead(-1);
-		m_data += socket.readAll();
-	} while (!m_data.contains("250") && !m_data.contains("552"));
-
-	socket.disconnectFromHost();
-}
-
-//-----------------------------------------------------------------------------
-
-void Dictionary::parseDefinition() {
-	if (m_data.isEmpty()) {
-		return;
-	}
-
-	Type type = Status;
-	QRegExp part_of_speech("(n|v|adj|adv) 1?: .*");
-	QRegExp number("(\\d*:) .*");
-	int definitions = 0;
-	bool first_line = false;
-
-	m_definition.clear();
-	QStringList lines = m_data.split('\n', QString::SkipEmptyParts);
-	for (int i = 0; i < lines.count(); ++i) {
-		QString line = lines.at(i).simplified();
-
-		// Parse status
-		if (type == Status) {
-
-			QString status = line.left(3);
-			if (status == "150") {
-			} else if (status == "151") {
-				type = Name;
-			} else if (status == "250") {
-				type = Done;
-			} else if (status == "550") {
-				type = Done;
-			} else if (status == "552") {
-				m_definition = tr("No definition found");
-				type = Done;
-			}
-
-		// Parse name
-		} else if (type == Name) {
-
-			m_definition += "<p class=\"title\">" + line;
-			type = Definition;
-			first_line = true;
-
-		} else if (type == Definition) {
-
-			// Parse part of speech
-			if (part_of_speech.exactMatch(line)) {
-				QString cap = part_of_speech.cap(1);
-				line.remove(0, cap.length() + 1);
-				if (cap == "n") {
-					cap = "noun";
-				} else if (cap == "v") {
-					cap = "verb";
-				} else if (cap == "adj") {
-					cap = "adjective";
-				} else if (cap == "adv") {
-					cap = "adverb";
-				}
-				definitions = 0;
-				m_definition += "</p>\n<p class=\"part\"><b><i>" + cap + "</i></b></p>\n<p>";
-				first_line = false;
-			} else if (first_line) {
-				m_definition += "</p>\n<p>";
-				first_line = false;
-			}
-
-			// Parse numbered definition
-			if (number.exactMatch(line)) {
-				QString cap = number.cap(1);
-				line.remove(0, cap.length() + 1);
-				if (cap.left(cap.length() - 1).toInt() > 0) {
-					if (definitions > 0) {
-						m_definition += "</p>\n";
-					}
-					definitions++;
-					line.prepend("<p><b>" + cap + "</b> ");
-				}
-			}
-
-			// Parse end of defintion
-			if (line == ".") {
-				m_definition += "</p>\n";
-				type = Status;
+	// Fetch word definitions
+	QString definition;
+	if (reply->error() == QNetworkReply::NoError) {
+		bool started = false;
+		QXmlStreamReader xml(reply);
+		while (!xml.atEnd()) {
+			xml.readNext();
+			if (!xml.isStartElement()) {
 				continue;
 			}
 
-			// Add definition text
-			m_definition += line + " ";
-
+			if (xml.name() == "section") {
+				int toclevel = xml.attributes().value("toclevel").toString().toInt();
+				if (toclevel == 1) {
+					if (!started) {
+						started = true;
+					} else {
+						break;
+					}
+				} else if (toclevel == 2) {
+					definition += xml.readElementText();
+				}
+			} else if (xml.name() == "error") {
+				xml.raiseError();
+			}
 		}
 
+		if (!xml.hasError()) {
+			definition += "<p align=\"right\">" + tr("Definition from Wiktionary, the free dictionary") + "</p>";
+		} else {
+			definition = tr("No definition found");
+		}
+	} else {
+		definition = tr("Unable to connect to Wiktionary");
 	}
+	emit wordDefined(word, definition);
 
-	// Parse word links
-	m_definition.replace(QRegExp("\\{([^\\}]+)\\}"), "<i>\\1</i>");
-
-	// Remove extra spaces
-	m_definition.replace(" </p>", "</p>");
+	reply->deleteLater();
 }
