@@ -1,3 +1,6 @@
+2013-01-06 Graeme Gott <graeme@gottcode.org>
+	* Use Wiktionary for definitions.
+
 2012-12-24 Graeme Gott <graeme@gottcode.org>
 	* Add support for compiling with Qt 5.0.0.
 
